src/api/core/snapshots/roadster__api__core__health__tests__health_check_with_checks@case_2.snap
---
source: src/api/core/health.rs
expression: health_response
---
{
  "latency": 1,
  "resources": {
    "example": {
      "status": {
        "err": {
          "msg": "Error"
        }
      },
      "latency": 200
    }
  }
}
