src/api/core/snapshots/roadster__api__core__health__tests__health_check_with_checks_error.snap
---
source: src/api/core/health.rs
expression: health_response
---
{
  "latency": 1,
  "resources": {
    "example": {
      "status": {
        "err": {
          "msg": "An error occurred while running health check `example`: Error"
        }
      },
      "latency": 1
    }
  }
}
